12_security/12.1/peerauthentication-advertisement.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "advertisement-policy"
  namespace: "weather"
spec:
  selector:
     matchLabels:
       app: advertisement
  mtls:
    mode: STRICT
